--- a/views/events-show.handlebars
+++ b/views/events-show.handlebars
@@ -1,5 +1,5 @@
 <div class='row mt-4'>
-	<div class='col-lg-6 offset-lg-3'>
+	<div class='col-lg-6'>
 		<img
 			class='img-fluid w-100 rounded mb-3'
 			src='{{event.imgUrl}}'
@@ -9,6 +9,29 @@
 		<div class='lead'>{{event.desc}}</div>
 		<div class='text-right'>
 			<a href='/events/{{event.id}}/edit'>Edit</a>
+		</div>
+	</div>
+	<div class='col-lg-4 offset-lg-1'>
+		<a
+			href='/events/{{event.id}}/rsvps/new'
+			class='btn btn-primary btn-sm'
+		>RSVP</a>
+	</div>
+	<div class='col-lg-4 offset-lg-1'>
+		<div class='d-flex justify-content-between'>
+			<b>RSVPs ({{event.Rsvps.length}})</b>
+			<a
+				href='/events/{{event.id}}/rsvps/new'
+				class='btn btn-primary btn-sm'
+			>RSVP</a>
+		</div>
+
+		<div class='list-group mt-4'>
+			{{#each event.Rsvps}}
+				<div class='list-group-item'>
+					{{this.name}}
+				</div>
+			{{/each}}
 		</div>
 	</div>
 </div>
