--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -9,8 +9,13 @@
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
         <a class="nav-link" href="/">Home</a>
-        <a class="nav-link" href="/sign-up">Sign Up</a>
-        <a class="nav-link" href="/login">Log In</a>
+        {{#if currentUser}}
+          <a class="nav-link" href="/logout">Log Out</a>
+        {{ else }}
+          <a class="nav-link" href="/sign-up">Sign Up</a>
+          <a class="nav-link" href="/login">Log In</a>
+        {{/if}}
+        
       </li>
     </ul>
   </div>
